--- a/.htaccess
+++ b/.htaccess
@@ -3,17 +3,22 @@ Options +FollowSymLinks
 RewriteEngine On
 RewriteBase /
 
-#Test
+# Test
 #RewriteRule ^fez index.php
 
-#Note edit
+# CRUD d'un Lien
+RewriteRule ^liens/formulaire/([0-9]+)/*$ controller/lien.php?id=$1
+RewriteRule ^liens/formulaire/*$ controller/lien.php
+
+# Note edit
 RewriteRule ^note/([0-9]+)/*$ note.php?id=$1 [L]
 
-#Filters
+# Filters
 RewriteRule ^auteur/(.*)/*$ liste.php?auteur=$1 [L]
 RewriteRule ^source/(.*)/*$ liste.php?source=$1 [L]
 RewriteRule ^categorie/(.*)/*$ liste.php?categorie=$1 [L]
 RewriteRule ^motcle/(.*)/*$ liste.php?motcle=$1 [L]
 RewriteRule ^recherche/*$ liste.php [QSA,L]
 
-RewriteRule ^([a-zA-Z_]+)/*$ $1.php [L]
+# Regle par defaut
+RewriteRule ^([a-zA-Z_]+)/*$ controller/$1.php [L]
